--- a/_apptpl/tpl/scss/screen.scss
+++ b/_apptpl/tpl/scss/screen.scss
@@ -1,5 +1,6 @@
 @charset "utf-8";
 
+@import "_settings";
 @import "bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap";
 @import "bower_components/fontawesome/scss/font-awesome";
 
