Provide a good starting point for new apps.
_settings.scss: provide a flat user experience without smoothed angles.
_overrides.scss: this is where all the framework override happens, so we don't need to modify bootstrap directly.
_colors.scss: this is where all the colors of the app will live.
screen.scss: include the new _colors.scss, _overrides.scss, Open Sans webfont and remove the empty body declaration. All the "main" styles will live in override. Screen will serve only as "widget logic" components styling.
99_app.js: a starting point to write your Javascript for your app. Other libraries should start with lower number ( 01..98 ) so our script will always be the last one. Viewports are also already managed via "bootstrap-toolkit".

--- a/_apptpl/tpl/scss/_settings.scss
+++ b/_apptpl/tpl/scss/_settings.scss
@@ -1,1 +1,6 @@
+// Erase border-radius
+$border-radius-base: 0;
+$border-radius-small: $border-radius-base;
+$border-radius-large: $border-radius-base;
+// Bootstrap Icons Path
 $icon-font-path: '../fonts/';
