--- a/_apptpl/tpl/scss/screen.scss
+++ b/_apptpl/tpl/scss/screen.scss
@@ -1,9 +1,11 @@
 @charset "utf-8";
 
 @import "_settings";
+@import "_colors";
 @import "bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap";
 @import "bower_components/fontawesome/scss/font-awesome";
+@import "_overrides";
 
-body {
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&subset=latin,latin-ext);
 
-}
+// Your Styles here
