--- a/_apptpl/tpl/scss/screen.scss
+++ b/_apptpl/tpl/scss/screen.scss
@@ -4,6 +4,7 @@
 @import "_colors";
 @import "bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap";
 @import "bower_components/fontawesome/scss/font-awesome";
+@import "bower_components/ionicons/scss/ionicons";
 @import "_overrides";
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&subset=latin,latin-ext);
