--- a/_apptpl/tpl/scss/_overrides.scss
+++ b/_apptpl/tpl/scss/_overrides.scss
@@ -66,14 +66,14 @@ a {
   }
 }
 
-@media ( max-width: $screen-xs-max ) {
+@include media-breakpoint-down(xs) {
   .row {
     > .col-xs-12 + .col-xs-12 {
       margin-top: 15px;
     }
   }
 }
-@media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+@include media-breakpoint-only(sm) {
   .row {
     > .col-sm-12 + .col-sm-12 {
       margin-top: 15px;
